syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.zlbovolini.hello";
option java_outer_classname = "HelloGrpc";
option objc_class_prefix = "HLW";

package com.github.zlbovolini;

service HelloGrpcService {
  rpc send (HelloGrpcRequest) returns (HelloGrpcReply) {}
}

message ErrorDetails {
  int32 code = 1;
  string message = 2;
}

message HelloGrpcRequest {
  string name = 2;
}

message HelloGrpcReply {
  int64 id = 1;
  string message = 2;
}